listings/ch03-common-programming-concepts/no-listing-28-if-condition-must-be-bool/output.txt
$ cargo run
   Compiling galezie v0.1.0 (file:///projects/galezie)
error[E0308]: mismatched types
 --> src/main.rs:4:8
  |
4 |     if number {
  |        ^^^^^^ expected `bool`, found integer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
error: could not compile `galezie`

To learn more, run the command again with --verbose.
